traefik/04_deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: demo-acme
          gcePersistentDisk:
            pdName: demo-acme
            fsType: ext4
      containers:
        - name: traefik
          image: "traefik:latest"
          volumeMounts:
            - mountPath: "/etc/traefik/config"
              name: config
            - mountPath: /etc/traefik/acme
              name: demo-acme
          args:
            - --configfile=/etc/traefik/config/traefik.toml
            - --api
            - --kubernetes
